--- a/gloria/index.html
+++ b/gloria/index.html
@@ -3,11 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu amor se chama Gloria Viana</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://alanderf.github.io/gloria/css/styles.css">
 </head>
 <body class="container">
 <h1>Meu amor se chama Gloria Viana</h1>
     <h1 class="titulo-principal">Ola, estou te enviando essa mensagem apenas para voce saber que estou sentindo muito sua falta. Seus abraços matinais fariam meus dias serem mais felizes.</h1>
 </body>
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="https://alanderf.github.io/gloria/js/index.js"></script>
 </html>
