--- a/gloria/index.html
+++ b/gloria/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu amor se chama Gloria Viana</title>
-    <link rel="stylesheet" href="https://alanderf.github.io/gloria/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="container">
 <h1>Meu amor se chama Gloria Viana</h1>
