--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Alander Fosse Portfolio">
     <meta name="author" content="Alander Fosse">    
-    <link rel="shortcut icon" href="favicon.ico"> 
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> 
     
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
