--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Alander Fosse Portfolio">
     <meta name="author" content="Alander Fosse">    
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> 
+	<link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/images/favicon.ico" >
     
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
