--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						    <ul class="resume-social list-unstyled">
 				                <li class="mb-3"><a href="https://www.linkedin.com/in/alander-fosse/"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/alander-fosse</a></li>
 				                <li class="mb-3"><a href="https://github.com/AlanderF"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>https://github.com/AlanderF</a></li>
-				                <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fa fa-map-marker" aria-hidden="true"></i></span id='address'>United Kingdom</a></li>
+				                <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fa fa-map-marker" aria-hidden="true"></i></span id='address'>Italy</a></li>
 				                <li class="mb-3"><a href="#"  id="myid"><span class="fa-container text-center mr-2"><i class="fa fa-envelope" aria-hidden="true"></i></span>alander.ducross@gmail.com</a></li>
 						    </ul>
 					    </div><!--//secondary-info-->
@@ -367,7 +367,7 @@
 								        <li class="mb-2">
 								            <div class="resume-skill-name">PHP</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 55%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 										<li class="mb-2">
@@ -379,7 +379,7 @@
 										<li class="mb-2">
 								            <div class="resume-skill-name">Java</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 							        </ul>
